padding / spacing fixes

--- a/src/_assets/css/_global.scss
+++ b/src/_assets/css/_global.scss
@@ -4,7 +4,7 @@
   background-position: center center;
   padding: 1rem 0;
 
-  @include breakpoint(large) {
+  @include breakpoint(medium) {
     padding: 0;
   }
 }
